tests/pre_push/failures/snapshots/pre_push__failures__ls_remote_observation_failure.snap
---
source: tests/pre_push/failures/mod.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-ls-remote-fail is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] [ERROR] Command "git" "--no-replace-objects" "ls-remote" "origin" "refs/heads/[GHERRIT_ID_1]" failed with status: exit status: 1. Stderr: Simulated failure for git ls-remote
